--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "dietics-client"]
 	path = dietics-client
 	url = https://github.com/monjurmorshed793/dietics-client.git
+	branch = main
 [submodule "dietics-service"]
 	path = dietics-service
 	url = https://github.com/monjurmorshed793/dietics-service.git
+	branch = main
